--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node -r tsconfig-paths/register ./dist/main.js",
+    "start": "node -r dotenv/config tsconfig-paths/register ./dist/main.js",
     "dev": "nodemon",
     "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +16,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "mongodb": "^6.19.0",
+    "mongoose": "^8.18.1",
+    "pino-http": "^10.5.0",
     "reflect-metadata": "^0.2.2",
     "routing-controllers": "^0.11.3"
   },
@@ -27,6 +31,7 @@
     "eslint": "^9.35.0",
     "globals": "^16.3.0",
     "nodemon": "^3.1.10",
+    "pino-pretty": "^13.1.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2",
