--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,7 @@
     "sourceMap": true,
     "strictNullChecks": true,
     "target": "es2019"
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "**/*.spec.ts", "**/*.test.ts"]
 }
